--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,105 +6,159 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="10dp"
-        android:textSize="18dp"
-        android:textColor="@color/colorPrimary"
-        android:text="@string/app_name"/>
-    <android.support.v7.widget.AppCompatSeekBar
-        android:id="@+id/seekbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/startTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:00"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="1dp"/>
-        <TextView
-            android:id="@+id/endTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:00"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/last"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="上一曲"/>
-        <Button
-            android:id="@+id/play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="播放/暂停"/>
-
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="下一曲"/>
-        <Button
-            android:id="@+id/mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="单曲循环"/>
-    </LinearLayout>
+    <include layout="@layout/view_titlebar"/>
     <RelativeLayout
-        android:id="@+id/lrc_ll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.zyf.music.widget.LrcView
-            android:layout_centerInParent="true"
-            android:id="@+id/lrc_sing"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            app:lrcAnimationDuration="1000"
-            app:lrcCurrentTextColor="#3F51B5"
-            app:lrcDividerHeight="24dp"
-            app:lrcLabel="找不到歌词"
-            app:lrcNormalTextColor="#BDBDBD"
-            app:lrcPadding="40dp"
-            app:lrcTextSize="16sp"
-            app:lrcTimeTextColor="#BDBDBD"
-            app:lrcTimelineColor="#80BDBDBD"
-            app:lrcTimelineTextColor="#9FA8DA"/>
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"/>
+            <ImageView
+                android:id="@+id/play_icon"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/default_music_icon" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <com.zyf.music.widget.LrcView
+                    android:layout_centerInParent="true"
+                    android:id="@+id/lrc_sing"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    app:lrcAnimationDuration="1000"
+                    app:lrcCurrentTextColor="@color/blue"
+                    app:lrcDividerHeight="15dp"
+                    app:lrcLabel="找不到歌词"
+                    app:lrcNormalTextColor="#BDBDBD"
+                    app:lrcPadding="40dp"
+                    app:lrcTextSize="16sp"
+                    app:lrcTimeTextColor="#BDBDBD"
+                    app:lrcTimelineColor="#80BDBDBD"
+                    app:lrcTimelineTextColor="#9FA8DA"/>
+            </RelativeLayout>
+
+        </LinearLayout>
         <com.zyf.music.widget.LrcView
             android:layout_centerInParent="true"
             android:id="@+id/lrc_full"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:lrcAnimationDuration="1000"
-            app:lrcCurrentTextColor="#3F51B5"
-            app:lrcDividerHeight="24dp"
+            app:lrcCurrentTextColor="@color/blue"
+            app:lrcDividerHeight="15dp"
             app:lrcLabel="找不到歌词"
             app:lrcNormalTextColor="#BDBDBD"
             app:lrcPadding="40dp"
             app:lrcTextSize="16sp"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:lrcTimeTextColor="#BDBDBD"
             app:lrcTimelineColor="#80BDBDBD"
             app:lrcTimelineTextColor="#9FA8DA"/>
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="vertical">
+        <android.support.v7.widget.AppCompatSeekBar
+            android:id="@+id/seekbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/startTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="00:00"/>
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
+            <TextView
+                android:id="@+id/endTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sp_12"
+                android:text="00:00"/>
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="@dimen/dp_10"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@mipmap/collect_icon"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@mipmap/timing_icon"/>
+            <ImageView
+                android:id="@+id/mode"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@mipmap/list_loop_icon"/>
+            <ImageView
+                android:id="@+id/list_song"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@mipmap/list_icon"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/last"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@mipmap/previous_icon"/>
+            <ImageView
+                android:id="@+id/play"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@mipmap/pause_icon"
+                />
+            <ImageView
+                android:id="@+id/next"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/dp_10"
+                android:src="@mipmap/next_icon"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
