--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="blue">#4B86FA</color>
     <color name="black_1">#333333</color>
     <color name="split_line">#11112233</color>
+    <color name="text2">#333333</color>
 
     <color name="lrc_normal_text_color">#9E9E9E</color>
     <color name="lrc_current_text_color">#FF4081</color>
